--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link href='http://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
+
         <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/2.0.3/jquery-2.0.3.min.js"></script>
         <script type="text/javascript" src="//cdn.jsdelivr.net/kineticjs/4.5.4/kinetic.min.js"></script>
+
+        
         <link rel="stylesheet/less" href="style.less" type="text/css" />
         <script type="text/javascript" src="//cdn.jsdelivr.net/less/1.4.2/less.min.js"></script>
 
         <link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=VT323' rel='stylesheet' type='text/css'>
+        <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/fontawesome/4.0.3/css/font-awesome.min.css" />
+
+        <script type="text/javascript" src="//cdn.jsdelivr.net/odometer/0.3.6/odometer.min.js"></script>
+        <link type="text/css" rel="stylesheet" href="//cdn.jsdelivr.net/odometer/0.3.6/themes/odometer-theme-default.css" />
 
         <script type="text/javascript" src="game.js"></script>
     </head>
@@ -21,7 +29,15 @@
             </div>
         </div>
 
-        <span id="current-color">current</span>
-        <div id="mixins"></div>
+        <div id="mixins">
+            <div id="turn-counter">
+                <div id="turns" class="odometer">
+                    0
+                </div>
+
+                <div class="label">
+                    turns<br/>left
+                </div>
+            </div></div>
     </body>
 </html>
