--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
         <!-- jQ -->
         <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/2.0.3/jquery-2.0.3.min.js"></script>
 
-        <!-- LESS -->
-        <link rel="stylesheet/less" href="style.less" type="text/css" />
-        <script type="text/javascript" src="//cdn.jsdelivr.net/less/1.4.2/less.min.js"></script>
+        <link rel="stylesheet" href="style.css" type="text/css" />
 
         <!-- Fonts -->
         <link href='http://fonts.googleapis.com/css?family=Coda' rel='stylesheet' type='text/css'>
